--- a/src/pages/Login/index.less
+++ b/src/pages/Login/index.less
@@ -1,40 +1,40 @@
 .login {
   width: 100%;
-  height: 100vh;
-  background: #f0f2f5;
-  > div {
-    position: relative;
-    margin: 0 auto;
-    padding: 20px 0;
-    width: 20%;
-    height: 100%;
-    min-width: 330px;
-    min-height: 600px;
+  height: 100%;
+  background-color: #f5f5f5;
+}
+
+.login-container {
+  position: relative;
+  width: 400px;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column; // 主轴变成y轴
+  align-items: center;
+}
+
+.login-header {
+  margin: 50px 0;
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  img {
+    display: block;
+    width: 40px;
+    height: 40px;
   }
-  .login-header {
-    padding: 30px 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    img {
-      width: 50px;
-      height: 50px;
-      margin-right: 20px;
-    }
-    h1 {
-      font-weight: 600;
-      margin-bottom: 0;
-    }
+  h1 {
+    margin-bottom: 0;
+    font-weight: 700;
   }
-  .login-footer {
-    position: absolute;
-    width: 100%;
-    bottom: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    .copyright {
-      margin: 0 5px;
-    }
-  }
+}
+
+.login-footer {
+  position: absolute;
+  bottom: 10px;
+  display: flex;
+  flex-direction: column; // 主轴变成y轴
+  align-items: center;
 }
