--- a/src/pages/Login/components/LoginForm/index.less
+++ b/src/pages/Login/components/LoginForm/index.less
@@ -1,5 +1,20 @@
-.login-form-header {
-  .ant-tabs-nav-wrap {
-    justify-content: center;
+.login-form-phone {
+  display: flex;
+  justify-content: space-between;
+  button {
+    margin-left: 10px;
+  }
+}
+.login-form-btn {
+  width: 100%;
+}
+.login-form-icons {
+  width: 170px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  .icons {
+    font-size: 20px;
+    cursor: pointer;
   }
 }
