--- a/src/pages/Login/index.less
+++ b/src/pages/Login/index.less
@@ -31,6 +31,13 @@
   }
 }
 
+.login-content {
+  width: 80%;
+  .ant-tabs-nav-wrap {
+    justify-content: center;
+  }
+}
+
 .login-footer {
   position: absolute;
   bottom: 10px;
