--- a/src/layout/PrimaryLayout/index.less
+++ b/src/layout/PrimaryLayout/index.less
@@ -31,6 +31,7 @@
   img {
     width: 30px;
     height: 30px;
+    border-radius: 50%;
   }
   span {
     margin: 0 5px 0 10px;
@@ -41,6 +42,7 @@
   padding: 10px 20px;
   background-color: #fff;
   h3 {
+    font-weight: 700;
     margin-top: 10px;
     margin-bottom: 0;
   }
