--- a/src/layouts/PrimaryLayout/index.less
+++ b/src/layouts/PrimaryLayout/index.less
@@ -1,95 +1,44 @@
 .layout {
-  width: 100%;
-  height: 100%;
-}
-.trigger {
-  font-size: 18px;
-  line-height: 64px;
-  padding: 0 24px;
-  cursor: pointer;
-  transition: color 0.3s;
+  height: 100vh;
 }
 
-.trigger:hover {
-  color: #1890ff;
-}
-
-.logo {
+.layout-logo {
+  height: 80px;
   display: flex;
   align-items: center;
-  justify-content: center;
-  height: 64px;
+  justify-content: space-around;
+  background-color: #002140;
   img {
+    display: flex;
     width: 40px;
     height: 40px;
   }
   h1 {
-    margin-left: 10px;
-    margin-bottom: 0;
-    font-weight: bolder;
     color: #fff;
-    white-space: nowrap;
+    margin-bottom: 0;
+    font-size: 18px;
+    white-space: nowrap; // 文字不能换行
   }
 }
-.site-layout {
-  position: relative;
-}
-.site-layout-header {
-  padding: 0;
-  background: #fff;
-  border-bottom: 1px solid rgba(0, 21, 41, 0.08);
-}
 
-.site-layout .site-layout-background {
-  min-height: 800px;
-  background: #f0f2f5;
-}
-
-.site-layout-header-wrap {
+.layout-header {
+  padding: 10px 20px;
   background-color: #fff;
-  padding: 10px 20px 1px 20px;
-  > h3 {
-    color: rgba(0, 0, 0, 0.85);
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 32px;
-    margin-top: 10px;
-  }
-}
-
-.site-layout-container {
   display: flex;
+  justify-content: flex-end; // 靠右边布局
   align-items: center;
-  justify-content: space-between;
-  padding-right: 20px;
-}
-
-.site-layout-right {
-  display: flex;
-}
-
-.site-layout-user {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  padding: 0 10px;
-  span {
-    margin-left: 10px;
-  }
+  border-bottom: 1px solid #ccc;
   img {
     width: 30px;
     height: 30px;
     border-radius: 50%;
   }
+  span {
+    margin: 0 5px 0 10px;
+  }
 }
 
-.site-layout-lang:hover,
-.site-layout-user:hover {
-  background-color: rgba(0, 0, 0, 0.025);
-}
-
-.site-layout-lang {
+.layout-header-lang {
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -98,6 +47,20 @@
   font-size: 18px;
 }
 
-.site-layout-content-wrap {
+.layout-nav {
+  padding: 10px 20px;
+  background-color: #fff;
+  h3 {
+    font-weight: 700;
+    margin-top: 10px;
+    margin-bottom: 0;
+  }
+}
+
+.layout-content {
   padding: 20px;
+}
+
+.layout-footer {
+  text-align: center;
 }
